<resources>
    <string name="app_name">Android Virtual Assistant</string>

    <!-- Connectivity and app -->
    <string name="status">Status</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="running">You are now sharing the content of your screen</string>
    <string name="not_running">Press START share screen content</string>
    <string name="action_settings">Settings</string>
    <string name="server_address">Server address</string>
    <string name="toggle_keyboard">Toggle keyboard</string>
    <string name="connecting_dlg">Connecting...</string>
    <string name="enter_login_details">Please enter your login details</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="confirm_disconnect">Are you sure you want to disconnect?</string>
    <string name="disconnect">Disconnect</string>
    <string name="key.F1">F1</string>
    <string name="key.cad">Ctrl-Alt-Del</string>
    <string name="failed_to_create_datastore">"Failed to create data store directory: "</string>
    <string name="failed_to_initialise_vnc_sdk">"Failed to initialise VNC SDK: "</string>
    <string name="authentication_check_cancelled">Authentication check cancelled.</string>
    <string name="peer_verification_title">Verify peer identity</string>
    <string name="peer_verification_message">Connecting to %1$s\n\nServer Id: %2$s\nCatchphrase: %3$s</string>
    <string name="peer_verification_failed">Peer verification failed: </string>
    <string name="peer_verification_cancelled">Peer verification cancelled.</string>
    <string name="sending_authentication_response_failed">"Sending authentication response failed: "</string>
    <string name="failed_to_create_viewer">"Failed to create viewer: "</string>
    <string name="failed_to_register_tcp_addon">"Failed to enable Direct TCP add-on: "</string>
    <string name="failed_to_make_vnc_cloud_connection">"Failed to make VNC Cloud connection: "</string>
    <string name="failed_no_vnc_cloud_settings_specified">"No connectivity information specified."</string>
    <string name="failed_no_tcp_address">"You must enter a valid TCP address to use the Direct TCP module</string>
    <string name="failed_no_tcp_addon_code">"You must enter a valid Direct TCP add-on code to use the Direct TCP module"</string>
    <string name="disconnected">"Disconnected: "</string>
    <string name="disconnected_authenticating">"Disconnected whilst authenticating: "</string>
    <string name="address_hint">Address</string>
    <string name="port_hint">Port</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="login">Login</string>
    <string name="action_register">Register</string>

</resources>
