<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jacob.androidvirtualassist.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_running"
                android:id="@+id/status"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textAlignment="center" />

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/startStopButton"
                android:layout_gravity="bottom|center_horizontal"
                style="?android:textAppearanceSmall"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textOff="@string/start"
                android:textOn="@string/stop"
                android:enabled="true"
                android:layout_above="@+id/button"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="58dp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/button"
                android:layout_gravity="bottom|center_horizontal"
                style="?android:textAppearanceSmall"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="56dp" />

</RelativeLayout>